# elata-eeg

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_CHECKLIST.md  README.md  README2.md  agent_performance_check.md  ai_prompt.md  ai_scratchpad.md  atomic_state_update_plan.md  binary_protocol.md  config.json  debugging_summary.md  definitive_fix_v4.md  final_definitive_fix_plan.md  final_fix_plan.md  fix_lightdm.sh  install.sh  rebuild.sh  setup.sh  start.sh  stop.sh  tmp.thing  uninstall.sh  ws_client.py
applets/: ai_prompt.md  tsconfig.json
case/: BOM.md  README.md  ads1299evm.py  builder.py  case.py  config.py  eeg-bottom-case.3mf  eeg-lcd-case.3mf  eeg-main-case.3mf  geometry.py  install.md  lcd.py  main.ipynb  main.py  pi5.py
crates/boards/: Cargo.toml
crates/boards/src/: lib.rs
crates/boards/src/elata_v1/: driver.rs  mod.rs
crates/boards/src/elata_v2/: README.md  driver.rs  mod.rs
crates/daemon/: API.md  Cargo.toml  DEBUGGING.md  adc_daemon.service  ai_prompt.md  e2e_test_pipeline.json  e2e_test_pipeline.yaml
crates/daemon/src/: api.rs  config.rs  lib.rs  main.rs  plugin_supervisor.rs  protocol.rs  server.rs  websocket_broker.rs  ws_test.rs
crates/daemon/tests/: full_stack.rs  wiring_test.rs
crates/device/: Cargo.toml  README.md  ai_prompt.md  config.json  daemon_config.json
crates/device/src/: config.rs  connection_manager.rs  driver_handler.rs  driver_handler_test.rs  event_bus.rs  lib.rs  main.rs  pid_manager.rs  plugin.rs  plugin_manager.rs  plugin_supervisor.rs  server.rs
crates/device/src/elata_emu_v1/: mod.rs
crates/device/src/elata_emu_v1/eeg_system/: mod.rs
crates/device/src/plugins/: brain_waves.rs  brain_waves_fft.rs  mod.rs
crates/device/tests/: full_stack.rs
crates/pipeline/: Cargo.toml  README.md  architecture.md  architecture_discussion.md  developer_experience_improvements.md  implementation_plan.md  plugins.md  pytorch-exploration.md
crates/pipeline/examples/: basic_pipeline.rs  full_pipeline_test.rs
crates/pipeline/src/: allocator.rs  bridge.rs  config.rs  control.rs  daemon_protocol.rs  data.rs  error.rs  executor.rs  features.md  graph.rs  lib.rs  macros.rs  plugin.rs  queue.rs  registry.rs  runtime.rs  stage.rs  tests.rs
crates/pipeline/src/stages/: acquire.rs  csv_sink.rs  eeg_source.rs  filter.rs  gui_filter.rs  mod.rs  test_stage.rs  to_voltage.rs  websocket_sink.rs
crates/sensors/: Cargo.toml  README.md  ai_prompt.md
crates/sensors/src/: lib.rs  main.rs  spi_bus.rs  types.rs
crates/sensors/src/ads1299/: acquisition.rs  builder.rs  driver.rs  error.rs  helpers.rs  mod.rs  registers.rs  spi.rs  test.rs
crates/sensors/src/board_drivers/: mod.rs  types.rs
crates/sensors/src/board_drivers/ads1299/: builder.rs  driver.rs  error.rs  mod.rs  registers.rs  spi.rs
crates/sensors/src/board_drivers/mock/: mock_data_generator.rs
crates/sensors/src/dsp/: coordinator.rs  mod.rs
crates/sensors/src/eeg_system/: mod.rs
crates/sensors/src/mock_eeg/: driver.rs  mock_data_generator.rs  mod.rs
daemon/: Cargo.toml  README.md  adc_daemon.service
daemon/src/: config.rs  config_test.rs  connection_manager.rs  driver_handler.rs  lib.rs  main.rs  server.rs  server_test.rs
data-explore/: README.md  basic.ipynb  check-onboard-filtering.ipynb  feature-extract.ipynb  test.ipynb  util.py
driver/: Cargo.toml  README.md  ai_prompt.md
driver/src/: lib.rs  main.rs  minimal_ads1299_test.rs
driver/src/board_driver/: ads1299_architecture.md  ads1299_driver.rs  ads1299_driver_skeleton.md  ads1299_implementation_plan.md  ads1299_readme.md  hal.rs  mock_data_generator.rs  mock_driver.rs  mock_hal.rs  mod.rs  rppal_hal.rs  types.rs
driver/src/board_drivers/: types.rs
driver/src/board_drivers/ads1299/: README.md  acquisition.rs  driver.rs  helpers.rs  mod.rs  spi.rs
driver/src/board_drivers/mock/: driver.rs
driver/src/dsp/: filters.rs  mod.rs
driver/src/eeg_system/: mod.rs  tests.rs
dsp/: ai_prompt.md
dsp/brain_waves_fft/: Cargo.toml
dsp/brain_waves_fft/src/: lib.rs
elata-eeg-rust-core/: Cargo.toml
examples/: data-plane-pipeline-config.json  pipeline-config.json
kiosk/: README.md  ai_architecture_prompt.md  ai_prompt.md  generate-certs.sh  index.html  main.ts  next.config.js  next.config.ts  package-lock.json  package.json  server.js  test-websocket-fix.js  tsconfig.json  websocket-test.html
pipelines/: default.yaml
plugins/: README.md
plugins/basic_voltage_filter/: Cargo.toml
plugins/basic_voltage_filter/src/: dsp.rs  lib.rs
plugins/brain-waves-display/backend/: Cargo.toml
plugins/brain-waves-display/backend/src/: main.rs
plugins/brain_waves_fft/: Cargo.toml  plugin.toml
plugins/brain_waves_fft/src/: lib.rs
plugins/brain_waves_fft/ui/: FftDisplay.tsx  FftRenderer.tsx
plugins/csv_recorder/: Cargo.toml
plugins/csv_recorder/src/: lib.rs
plugins/dsp/brain_waves_fft/: Cargo.toml
plugins/dsp/brain_waves_fft/src/: lib.rs
scripts/: install.sh  rebuild.sh  start.sh  stop.sh  uninstall.sh
todo/: DRDY_Fix_Plan.md  DRDY_Fix_Plan_v2.md  README.md  add-fft-cursor-interaction.md  ads1299_driver_investigation_plan.md  ads1299_driver_refactor_plan.md  ads1299_timestamp_fix_plan.md  applets.md  architectural-feedback-synthesis.md  architectural_fix_plan.md  architectural_plugin_fix.md  architectural_unification_plan.md  architecture-robustness-analysis.md  architecture_refactor_plan.md  boot_failures.md  bounded-architecture-improvement-plan.md  bounded-async-implementation-checklist.md  circular_graph_freeze_fix_plan.md  circular_graph_freeze_investigation.md  code_review.md  connection_issue_summary.md  consider_multi_sensor.md  cpu_leak_fix_implementation_plan.md  current_architecture.md  dsp.md  dynamic_plugin_loading_plan_v2.md  eeg-desci-marketplace-architecture.md  eeg_data_flow_debugging_log.md  eeg_graph_fix_plan.md  eeg_issues_investigation_plan.md  eeg_performance_analysis_plan.md  eeg_performance_optimization_plan.md  eeg_recording_investigation_plan.md  eeg_subscription_fix_plan.md  electro-placement-guide.md  event_driven_implementation_plan.md  event_driven_refactor_plan.md  (+71 more)
(+77 files in other folders)
