[workspace]
members = [
    "crates/device",
    "crates/sensors",
    "plugins/dsp/basic_voltage_filter",
    "plugins/dsp/brain_waves_fft",
]

[workspace.dependencies]
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"