[workspace]
resolver = "2"
members = [
    "crates/device",
    "crates/sensors",
    "crates/eeg_types",
    "plugins/basic_voltage_filter",
    "plugins/csv_recorder",
    "plugins/brain_waves_fft",
]

[workspace.dependencies]
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"
