[package]
name = "adc_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
eeg_driver = { path = "../driver" }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
csv = "1.2"
chrono = "0.4"

[[bin]]
name = "adc_daemon"
path = "src/main.rs"