[package]
name = "adc_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
eeg_driver = { path = "../driver" }
warp = { version = "0.3", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
csv = "1.2"
chrono = "0.4"
env_logger = "0.10" # Added logger

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
bytes = "1.0"

[[bin]]
name = "eeg_daemon"
path = "src/main.rs"