[package]
name = "boards"
version = "0.1.0"
edition = "2024"

[dependencies]
eeg_types = { path = "../eeg_types" }
sensors = { path = "../sensors" }
pipeline = { path = "../pipeline" }
log = "0.4"
crossbeam-channel = "0.5"
thread-priority = "0.3"

[features]
elata_v1 = ["sensors/ads1299"]
elata_v2 = ["sensors/ads1299"]
default = ["elata_v1", "elata_v2"]
