[package]
name = "adc_daemon"
version = "0.1.0"
edition = "2021"

[features]
default = ["brain_waves_fft_feature"]
brain_waves_fft_feature = ["dep:brain_waves_fft_plugin"]

[dependencies]
anyhow = "1.0" # Added for error handling
tracing = "0.1" # Added for structured logging
boards = { path = "../boards", features = ["elata_v1", "elata_v2"] }
eeg_types = { path = "../eeg_types" }
pipeline = { path = "../pipeline" }
sensors = { path = "../sensors" }
csv_recorder_plugin = { path = "../../plugins/csv_recorder" }
basic_voltage_filter_plugin = { path = "../../plugins/basic_voltage_filter" }
brain_waves_fft_plugin = { path = "../../plugins/brain_waves_fft", optional = true }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8" # Added for plugin manifest parsing
futures-util = "0.3"
csv = "1.2"
chrono = "0.4"
env_logger = "0.10" # Added logger
log = "0.4" # Added for logging
nix = { version = "0.27", features = ["signal"] }
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
bytes = "1.0"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
crossbeam-channel = "0.5"
tokio-stream = { version = "0.1", features = ["net"] }
async-trait = "0.1"

[[bin]]
name = "eeg_daemon"
path = "src/main.rs"
