[package]
name = "adc_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7" # Added for CancellationToken
eeg_driver = { path = "../driver" }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
csv = "1.2"
chrono = "0.4"
env_logger = "0.10" # Added logger
log = "0.4" # Added for logging
elata_dsp_brain_waves_fft = { path = "../plugins/dsp/brain_waves_fft", optional = true }
basic_voltage_filter = { path = "../plugins/dsp/basic_voltage_filter" }
nix = { version = "0.27", features = ["signal"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
bytes = "1.0"

[[bin]]
name = "eeg_daemon"
path = "src/main.rs"

[features]
default = ["brain_waves_fft_feature"]
# applets = ["brain_waves_fft_feature"] # Example if using a master 'applets' feature
brain_waves_fft_feature = ["dep:elata_dsp_brain_waves_fft"]