[package]
name = "adc_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7" # Added for CancellationToken
async-trait = "0.1" # Added for async trait support
eeg_sensor = { path = "../sensors" }
basic_voltage_filter = { path = "../../plugins/basic_voltage_filter" }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8" # Added for plugin manifest parsing
futures-util = "0.3"
csv = "1.2"
chrono = "0.4"
env_logger = "0.10" # Added logger
log = "0.4" # Added for logging
nix = { version = "0.27", features = ["signal"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
bytes = "1.0"

[[bin]]
name = "eeg_daemon"
path = "src/main.rs"
