[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = "0.5"
log = { workspace = true }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
crossbeam-utils = "0.8"
crossbeam-queue = "0.3" # Added for ArrayQueue
schemars = "0.8"
inventory = "0.3"
petgraph = "0.6" # For topological sort
rtrb = { version = "0.2", optional = true } # Real-time ring buffer
loom = { version = "0.7", optional = true } # For concurrency testing
tungstenite = "0.21"

[dev-dependencies]
eeg_types = { path = "../eeg_types" }
tracing-subscriber = "0.3"
proptest = "1.0"

[features]
default = []
meta-tags = []
rtrb = ["dep:rtrb"] # Enable rtrb queue backend
loom = ["dep:loom"] # Enable loom testing

[[example]]
name = "basic_pipeline"
path = "examples/basic_pipeline.rs"

[[example]]
name = "full_pipeline_test"
path = "examples/full_pipeline_test.rs"