[package]
name = "basic_voltage_filter_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tracing = "0.1"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Local dependencies
eeg_types = { path = "../../crates/eeg_types" }
sensors = { path = "../../crates/sensors" }
pipeline = { path = "../../crates/pipeline" }