[package]
name = "brain_waves_fft_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rustfft = "6.1"
num-complex = "0.4"
apodize = "1.0.0"

# Local dependencies
eeg_types = { path = "../../crates/eeg_types" }