[package]
name = "brain_waves_fft_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["sync"] }
tokio-util = "0.7"
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rustfft = "6.1"
num-complex = "0.4"
apodize = "1.0.0"
serde_json = { workspace = true }
bytes = "1.0"

# Local dependencies
eeg_types = { path = "../../crates/eeg_types" }