[package]
name = "csv_recorder_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tracing = "0.1"
csv = "1.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }

# Local dependencies
eeg_types = { path = "../../crates/eeg_types" }
sensors = { path = "../../crates/sensors" }
pipeline = { path = "../../crates/pipeline" }