[package]
name = "brain_waves_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
warp = "0.3"
futures-util = "0.3"
rustfft = "6.0"

[[bin]]
name = "brain_waves_backend"
path = "src/main.rs"