[package]
name = "elata_dsp_brain_waves_fft"
version = "0.1.0"
edition = "2021"

[dependencies]
# For FFT processing
rustfft = "6.1"
# For WebSocket handling
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For logging
log = "0.4"
# For accessing driver types
eeg_driver = { path = "../../../driver" }

[lib]
name = "elata_dsp_brain_waves_fft" # Ensure this matches the package name for clarity
path = "src/lib.rs"